update: tmux.conf - Windows index

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,16 @@
 
+#+--- General ---+
 
+# enable mouse
+set -g mouse on
+
+# start index of window/pane eith 1
+set -g base-index 1
+set -g pane-base-index 1
 
 #+---Color Theme ---+
 set -g @plugin "arcticicestudio/nord-tmux"
+set -g @nord_tmux_no_patched_font "1"
 
 # Init and run tpm
 run "~/.dotfiles/tmux/plugins/tpm/tpm"
